# guildmaster-poc

./: .gitignore  AGENTS.md  LICENSE  README.md
client/: Cargo.toml
client/src/: entity.rs  main.rs
client/src/model/: player.rs  position.rs
client/src/module_bindings/: chat_message_table.rs  chat_message_type.rs  connect_reducer.rs  coords_type.rs  entity_table.rs  item_table.rs  item_type.rs  map_entity_type.rs  mod.rs  player_entity_table.rs  player_entity_type.rs  player_table.rs  player_type.rs  starter_area_table.rs  starter_area_type.rs  vector_2_type.rs
client/src/network/: connection.rs
client/src/ui/: character.rs  connection_dialog.rs  fonts.rs  login.rs  mod.rs  playing.rs
server/: Cargo.toml  spacetime.toml
server/src/: constants.rs  events.rs  lib.rs  main.rs  maps.rs  models.rs  systems.rs
server/src/entities/: entity.rs  mod.rs  player.rs
server/src/events/: game_event.rs
server/src/maps/: mod.rs  tavern_outside.rs
server/src/math/: shape.rs
server/src/models/: chat.rs  mod.rs  player.rs  position.rs
server/src/systems/: chat.rs  map_transition.rs  mod.rs  movement.rs
