[package]
name = "guildmaster-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13"
tokio = { version = "1", features = ["full"] }
oauth2 = "4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2.1"
